--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,16 +1,17 @@
 eclipse.preferences.version=1
+encoding//didi/gasCurve.py=utf-8
+encoding//didi/kmeans_city.py=utf-8
+encoding//didi/readche300.py=utf-8
 encoding//ml/Gensim.py=utf-8
 encoding//ml/KNN.py=utf-8
 encoding//ml/SVM.py=utf-8
 encoding//ml/SVM2.py=utf-8
-encoding//ml/kmeans_city.py=utf-8
+encoding//ml/tf-idf.py=utf-8
 encoding/FM.py=utf-8
 encoding/MyFileTool.py=utf-8
 encoding/Test.py=utf-8
 encoding/TestPandas.py=utf-8
-encoding/gasCurve.py=utf-8
 encoding/testClass2.py=utf-8
 encoding/test_pandas.py=utf-8
-encoding/tf-idf.py=utf-8
 encoding/tree.py=utf-8
 encoding/word2VecSoho.py=utf-8
