--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,8 +10,8 @@ encoding//ml/tf-idf.py=utf-8
 encoding/FM.py=utf-8
 encoding/MyFileTool.py=utf-8
 encoding/Test.py=utf-8
+encoding/TestML.py=utf-8
 encoding/TestPandas.py=utf-8
-encoding/testClass2.py=utf-8
 encoding/test_pandas.py=utf-8
 encoding/tree.py=utf-8
 encoding/word2VecSoho.py=utf-8
